--- a/academico/templates/Q.html
+++ b/academico/templates/Q.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <form method="get">
     <input type="text" name="Q" placeholder="filtrar por facultad">
-    <input type="submit" value="🔍">
+    <input type="submit" value="Buscar --> 🔍">
 </form>
